--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -21,11 +21,44 @@ body {
    flex-wrap: wrap;
    padding: 0;
    justify-content: space-between;
+   
 }
 .ImageGalleryItem {
+      width: 250px;
+      height: 250px;
+      overflow: hidden;
+
+
+
 }
 .loadButton {
    margin-left: auto;
    margin-right: auto;
    display: block;
+
+}
+.ImageGalleryItem-image{
+   margin: auto;
+}
+.modal{
+   position: fixed; /* фиксированное положение */
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0,0,0,0.5); /* цвет фона */
+    display: flex;
+}
+
+.modal-content{ 
+   position: absolute;
+   top:50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   padding: 12px;
+   background-color:  rgba(0,0,0,0.5);
+}
+.loader{
+display: flex;
+justify-content: center;
 }
