--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,5 +1,5 @@
 body {
-      background-color: aqua;
+      background-color:rgb(157, 235, 235);
       padding-bottom: 100px;
 }
 #root {
@@ -10,7 +10,7 @@ body {
 }
 
 .Searchbar {
-   background-color: aqua;
+   background-color: rgb(157, 235, 235);
    height: 50px;
    display: flex;
    justify-content: center;
